--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -9,7 +9,7 @@ and open the template in the editor.
 */
 
 body,html{
-    background-color: gray;
+    background-color: #5e5e5e;
     height: 100%;
     width: 100%;
     margin: 0;
@@ -20,8 +20,10 @@ header{
     background-color: black;
     height: 50px;
     color:white;
-        
-
+    width: 100%;
+    position: fixed;
+    margin-top: -25px;
+    
     
 }
 header #logo{
@@ -108,3 +110,15 @@ float:right;
 
 }
 
+footer{
+    width: 100%;
+    height: 100px;
+    background-color: black;
+    color:white;
+}
+footer #credits{
+    margin-bottom: 0px;
+    text-align: right;
+    padding-right: 20px;
+    line-height: 100px;
+}
