--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -41,16 +41,23 @@ header a{
     display: inline-block;
     text-decoration: none;
     text-transform: uppercase;
-    margin-left: 25px;
-    margin-right:25px;
+
 
     height: 50px;
     text-decoration: none;
     color:white;
+    width: 200px;
+    text-align: center;
+
+
 
 }
-#panzer{
-    font-weight: bold;
+#panzerlogo{
+    border-right-color: white;
+    border-right-style: dashed;
+    border-right-width: 1px;
+    width: 200px;
+    text-align: center;
 }
 
 
@@ -81,22 +88,28 @@ header span:hover * {
 }
 .book{
     background-color:white;
-    margin-left: 25px;
-    margin-right:  25px;
+    margin-left: auto;
+    margin-right:  auto;
     margin-top:25px;
     overflow: hidden;
+    width:800px;
+    padding-bottom:25px;
+    padding-top:25px;
+
 }
 .book .chapter{
     padding-left:25px;
+    padding-right:25px;
 }
 .book .chapter-name{
     font-size: xx-large;
 }
-.photoviewer{
+.photoJSviewer{
     background-color: black;
     color:white;
-    overflow: auto;
     
+    margin-left: auto;
+    margin-right:  auto;
 }
 .photoviewer-description {
     margin-left: auto;
