--- a/public_html/css/mobile.css
+++ b/public_html/css/mobile.css
@@ -41,12 +41,12 @@ header a{
     display: inline-block;
     text-decoration: none;
     text-transform: uppercase;
-
+    font-size: 10px;
 
     height: 50px;
     text-decoration: none;
     color:white;
-    width: 150px;
+    width: 50px;
     text-align: center;
 
 
@@ -56,7 +56,7 @@ header a{
     border-right-color: white;
     border-right-style: dashed;
     border-right-width: 1px;
-    width: 200px;
+    width: 100px;
     text-align: center;
 }
 
@@ -92,17 +92,14 @@ header span:hover * {
     margin-right:  auto;
     margin-top:25px;
     overflow: hidden;
-    width:800px;
+    width:auto;
     padding-bottom:25px;
     padding-top:25px;
-    box-shadow: 5px 5px 1px black;
-    
 
 }
 .book .chapter{
     padding-left:25px;
     padding-right:25px;
-  
 }
 .book .chapter-name{
     font-size: xx-large;
@@ -110,11 +107,11 @@ header span:hover * {
 .photoJSviewer{
     background-color: black;
     color:white;
+    width: calc(100%);
+    
     height: 250px;
-    width: 400px;
     margin-left: auto;
     margin-right:  auto;
-    margin-bottom: 20px;
 }
 .photoviewer-description {
     margin-left: auto;
@@ -141,6 +138,7 @@ footer #credits{
     line-height: 100px;
 }
 #photos_albums2015{
-    height: 450px;
-    width: 450px;
+    height: 350px;
+    
+    width: 100%;
 }
